--- a/.github/workflows/xcode_tests.yml
+++ b/.github/workflows/xcode_tests.yml
@@ -12,7 +12,7 @@ jobs:
   TestFlight:
     if: "contains(github.event.head_commit.message, '#TestFlight')"
     runs-on: macos-latest
-    environment: Apple App Store
+    environment: Apple TestFlight
 
     steps:
     - uses: actions/checkout@v2
